--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,10 +14,13 @@
     "prettier"
   ],
   "rules": {
-    "@typescript-eslint/explicit-function-return-type": [
-      "warn",
-      { "allowExpressions": true }
-    ],
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/require-await": "warn",
+    "@typescript-eslint/no-misused-promises": "warn",
+    "@typescript-eslint/prefer-nullish-coalescing": "warn",
+    "@typescript-eslint/prefer-for-of": "warn",
+    "@typescript-eslint/no-floating-promises": "warn",
+    "@typescript-eslint/no-unsafe-enum-comparison": "warn",
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
@@ -25,6 +28,7 @@
         "varsIgnorePattern": "^_"
       }
     ],
-    "no-console": ["warn", { "allow": ["warn", "error"] }]
+    "no-console": "off",
+    "react/no-unescaped-entities": "off"
   }
 }
