--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
+    "howler": "^2.2.4",
     "lucide-react": "^0.556.0",
     "next": "^15.5.7",
     "openai": "^6.10.0",
@@ -36,6 +37,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
+    "@types/howler": "^2.2.12",
     "@types/node": "^20.19.25",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
